[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/inimigos/abelha/abelha1.png" type="Texture" id=1]
[ext_resource path="res://sprites/inimigos/abelha/abelha7.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/abelha/abelha3.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/abelha/abelha8.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/abelha/abelha2.png" type="Texture" id=5]
[ext_resource path="res://sprites/inimigos/abelha/abelha4.png" type="Texture" id=6]
[ext_resource path="res://sprites/inimigos/abelha/abelha5.png" type="Texture" id=7]
[ext_resource path="res://sprites/inimigos/abelha/abelha6.png" type="Texture" id=8]
[ext_resource path="res://scripts/inimigos/abelha.gd" type="Script" id=9]
[ext_resource path="res://sprites/efeitos_jogo/textures/256/spotlight_2.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.8815, 3.24309 )

[sub_resource type="Animation" id=2]
resource_name = "atacando"
length = 2.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.6, 1.8, 2, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 4 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "create_shot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite2:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.6, 1.8, 2, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite3:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.6, 1.8, 2, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("sprite4:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.6, 1.8, 2, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "voando"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite3:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite4:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 70.1506, 42.3374 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.907, 9.04515 )

[node name="abelha" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 9
script = ExtResource( 9 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="sprite2" type="Sprite" parent="."]
position = Vector2( -5.31064, -18.903 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="sprite3" type="Sprite" parent="."]
position = Vector2( -10.4103, 26.7645 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="sprite4" type="Sprite" parent="."]
position = Vector2( 16.412, 14.7192 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( 1.14528, 1.34131 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/atacando = SubResource( 2 )
anims/voando = SubResource( 3 )

[node name="pos" type="Position2D" parent="."]
position = Vector2( 9.63376, -1.67305 )

[node name="pos2" type="Position2D" parent="."]
position = Vector2( 0.120104, -19.9571 )

[node name="pos3" type="Position2D" parent="."]
position = Vector2( -0.771803, 24.6382 )

[node name="pos4" type="Position2D" parent="."]
position = Vector2( 22.4177, 13.638 )

[node name="sensor" type="Area2D" parent="."]

[node name="col" type="CollisionShape2D" parent="sensor"]
visible = false
position = Vector2( -0.32682, 22.1258 )
shape = SubResource( 4 )

[node name="voar" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="col" type="CollisionShape2D" parent="voar"]
position = Vector2( -0.396851, 2.77795 )
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -12, 5 )
texture = ExtResource( 10 )
texture_scale = 0.7
color = Color( 0.34902, 0.862745, 1, 1 )
energy = 2.0
shadow_enabled = true
shadow_gradient_length = 3.0

[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]
[connection signal="body_entered" from="voar" to="." method="_on_voar_body_entered"]
